tests/miniJava/neg/001506_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new length [ 0 ] ; } }
